@@ -69,14 +69,16 @@ module Local = struct
       loop t [] len len
 
   let parent = function
-    | "" -> assert false
+    | "" ->
+      code_errorf "Path.Local.parent called on the root"
     | t ->
       match String.rindex_from t (String.length t - 1) '/' with
       | exception Not_found -> ""
       | i -> String.sub t ~pos:0 ~len:i
 
   let basename = function
-    | "" -> assert false
+    | "" ->
+      code_errorf "Path.Local.basename called on the root"
     | t ->
       let len = String.length t in
       match String.rindex_from t (len - 1) '/' with
@@ -174,6 +176,8 @@ let to_string = function
   | "" -> "."
   | t  -> t
 
+let sexp_of_t t = Sexp.Atom (to_string t)
+
 let root = ""
 
 let relative t fn =
@@ -198,7 +202,11 @@ let absolute =
 let reach t ~from =
   match is_local t, is_local from with
   | false, _ -> t
-  | true, false -> assert false
+  | true, false ->
+    Sexp.code_error "Path.reach called with invalid combination"
+      [ "t"   , sexp_of_t t
+      ; "from", sexp_of_t from
+      ]
   | true, true -> Local.reach t ~from
 
 let descendant t ~of_ =
