@@ -9,6 +9,8 @@ exception Of_sexp_error of t * string
 val of_sexp_error : t -> string -> _
 val of_sexp_errorf : t -> ('a, unit, string, 'b) format4 -> 'a
 
+val code_error : string -> (string * t) list -> _
+
 module Locs : sig
   type t =
     | Atom of Loc.t
